--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-prettier": "^2.9.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-slider-component": "^2.6.2",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
   },
