--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "eslint-config-prettier": "^2.9.0",
     "vue": "^2.5.2",
+    "vue-localstorage": "^0.6.2",
     "vue-router": "^3.0.1",
     "vue-slider-component": "^2.6.2",
     "vuex": "^3.0.1",
